agregue botones de enviar y borrar, cerre el form

--- a/unidad 3/tareaCV.html
+++ b/unidad 3/tareaCV.html
@@ -58,5 +58,10 @@
         <p><input type="email" name="email" placeholder="Email"></p>
         <p><input type="tel" name="telefono" placeholder="Telefono"></p>
         <p> <textarea name=" Consulta">Consulta</textarea></p>
+        <p>
+          <input type="submit" value="Enviar"/>
+          <input type="reset" value="Borrar">
+      </p>
+    </form>
   </body>
 </html>
