--- a/unidad 4/prueba.html
+++ b/unidad 4/prueba.html
@@ -1,12 +1,49 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
- </head>
- <body>
-    
- </body>
- </html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+   <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Prueba de CSS</title>
+   <link rel="stylesheet" href="prueba.css">
+</head>
+<body>
+   
+   <div>
+      <h1 class="forTitulo">TITULO PRINCIPAL</h1>
+   </div>
+   <div id="caja1">
+      <h2 class="forTitulo">Subtitulo 1</h2>
+      <img src="descarga.jpg" alt="auto 1" />
+      <h2 class="estiloRojo">Explicacion 1</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas quo nesciunt non maiores quis fuga
+         blanditiis quod vero. Reprehenderit repellendus inventore beatae nostrum et nemo impedit ex iste sed veniam!
+         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur iste eum facere voluptatibus quasi pariatur
+         excepturi laborum cumque sint fugit assumenda commodi, ad saepe. In assumenda cumque culpa laboriosam ab!
+      </p>
+   </div>
+   <div id="caja2">
+      <h2 class="forTitulo">Subtitulo 2</h2>
+      <img src="descarga 2.jpg" alt="auto 2" />
+      <h2 class="estiloVerde">Explicacion 2</h2>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa ab molestiae nobis natus, sequi quibusdam, sunt
+         cupiditate nulla minima eos accusamus! Ad quis, aperiam voluptatibus incidunt numquam iste iure architecto
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos nulla corporis dolor, cumque optio ea
+         porro molestias provident, in tempore temporibus ad, totam suscipit? Assumenda id totam aspernatur maxime quos.
+      </p>
+   </div>
+   <div id="caja3">
+      <h2 class="forTitulo">Subtitulo 3</h2>
+      <img src="descarga 3.jpg" alt="auto 3" />
+      <h2>Explicacion 3</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia facere accusantium, ex hic sapiente nisi
+         voluptates esse, fugiat nobis aperiam cumque, nulla quam veritatis numquam dignissimos laudantium nostrum nihil
+         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque ipsa repudiandae voluptatum possimus. Fugiat,
+         sint, cum perferendis totam, optio perspiciatis adipisci nemo aperiam similique earum quasi a quisquam. Ab,
+         voluptate?</p>
+   </div>
+   
+</body>
+
+</html>
